Bug 797889: Make sure IndexedDB does not send messages to thechild after it has begun shutting down. r=bent